--- a/deploy/charts/istio-operator/values.yaml
+++ b/deploy/charts/istio-operator/values.yaml
@@ -5,7 +5,7 @@
 operator:
   image:
     repository: banzaicloud/istio-operator
-    tag: 0.1.21
+    tag: 0.2.1
     pullPolicy: IfNotPresent
   resources:
     limits:
@@ -14,6 +14,8 @@ operator:
     requests:
       cpu: 100m
       memory: 128Mi
+
+istioVersion: 1.2
 
 # If you want the operator to expose the /metrics
 prometheusMetrics:
