--- a/deploy/charts/istio-operator/templates/operator-istio-1.2-crd.yaml
+++ b/deploy/charts/istio-operator/templates/operator-istio-1.2-crd.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.istioVersion 1.2 }}
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
@@ -649,7 +650,7 @@ spec:
               type: boolean
             version:
               description: Contains the intended Istio version
-              pattern: ^{{ .Values.istioVersion }}
+              pattern: ^1.2
               type: string
             watchAdapterCRDs:
               description: Whether or not to establish watches for adapter-specific
@@ -672,3 +673,4 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
+{{- end }}
