--- a/deploy/charts/istio-operator/templates/operator-remoteistio-1.2-crd.yaml
+++ b/deploy/charts/istio-operator/templates/operator-remoteistio-1.2-crd.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.istioVersion 1.2 }}
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
@@ -264,3 +265,4 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
+{{- end }}
