Make Istio version configurable in Helm charts (#268)
* Add Istio version configurable in charts

* Separate CRDs to multiple files

--- a/deploy/charts/istio-operator/templates/operator-istio-1.2-crd.yaml
+++ b/deploy/charts/istio-operator/templates/operator-istio-1.2-crd.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.istioVersion 1.2 }}
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
@@ -62,9 +63,22 @@ spec:
               properties:
                 affinity:
                   type: object
+                caSecretName:
+                  type: string
                 enabled:
                   type: boolean
+                healthCheck:
+                  description: Enable health checking on the Citadel CSR signing API.
+                    https://istio.io/docs/tasks/security/health-check/
+                  type: boolean
                 image:
+                  type: string
+                maxWorkloadCertTTL:
+                  description: Citadel uses a flag max-workload-cert-ttl to control
+                    the maximum lifetime for Istio certificates issued to workloads.
+                    The default value is 90 days. If workload-cert-ttl on Citadel
+                    or node agent is greater than max-workload-cert-ttl, Citadel will
+                    fail issuing the certificate.
                   type: string
                 nodeSelector:
                   type: object
@@ -74,6 +88,12 @@ spec:
                   items:
                     type: object
                   type: array
+                workloadCertTTL:
+                  description: For the workloads running in Kubernetes, the lifetime
+                    of their Istio certificates is controlled by the workload-cert-ttl
+                    flag on Citadel. The default value is 90 days. This value should
+                    be no greater than max-workload-cert-ttl of Citadel.
+                  type: string
               type: object
             controlPlaneSecurityEnabled:
               description: ControlPlaneSecurityEnabled control plane services are
@@ -90,6 +110,10 @@ spec:
               properties:
                 enabled:
                   type: boolean
+              type: object
+            defaultResources:
+              description: DefaultResources are applied for all Istio components by
+                default, can be overridden for each component
               type: object
             excludeIPRanges:
               description: ExcludeIPRanges the range where not to capture egress traffic
@@ -122,6 +146,8 @@ spec:
                   properties:
                     affinity:
                       type: object
+                    applicationPorts:
+                      type: string
                     enabled:
                       type: boolean
                     loadBalancerIP:
@@ -141,6 +167,8 @@ spec:
                     replicaCount:
                       format: int32
                       type: integer
+                    requestedNetworkView:
+                      type: string
                     resources:
                       type: object
                     sds:
@@ -149,6 +177,8 @@ spec:
                           type: boolean
                         image:
                           type: string
+                        resources:
+                          type: object
                       type: object
                     serviceAnnotations:
                       type: object
@@ -171,6 +201,8 @@ spec:
                   properties:
                     affinity:
                       type: object
+                    applicationPorts:
+                      type: string
                     enabled:
                       type: boolean
                     loadBalancerIP:
@@ -190,6 +222,8 @@ spec:
                     replicaCount:
                       format: int32
                       type: integer
+                    requestedNetworkView:
+                      type: string
                     resources:
                       type: object
                     sds:
@@ -198,6 +232,8 @@ spec:
                           type: boolean
                         image:
                           type: string
+                        resources:
+                          type: object
                       type: object
                     serviceAnnotations:
                       type: object
@@ -226,6 +262,75 @@ spec:
             includeIPRanges:
               description: IncludeIPRanges the range where to capture egress traffic
               type: string
+            istioCoreDNS:
+              description: Istio CoreDNS provides DNS resolution for services in multi
+                mesh setups
+              properties:
+                affinity:
+                  type: object
+                enabled:
+                  type: boolean
+                image:
+                  type: string
+                nodeSelector:
+                  type: object
+                pluginImage:
+                  type: string
+                replicaCount:
+                  format: int32
+                  type: integer
+                resources:
+                  type: object
+                tolerations:
+                  items:
+                    type: object
+                  type: array
+              type: object
+            localityLB:
+              description: Locality based load balancing distribution or failover
+                settings.
+              properties:
+                distribute:
+                  description: 'Optional: only one of distribute or failover can be
+                    set. Explicitly specify loadbalancing weight across different
+                    zones and geographical locations. Refer to [Locality weighted
+                    load balancing](https://www.envoyproxy.io/docs/envoy/latest/intro/arch_overview/load_balancing/locality_weight)
+                    If empty, the locality weight is set according to the endpoints
+                    number within it.'
+                  items:
+                    properties:
+                      from:
+                        description: Originating locality, '/' separated, e.g. 'region/zone'.
+                        type: string
+                      to:
+                        description: Map of upstream localities to traffic distribution
+                          weights. The sum of all weights should be == 100. Any locality
+                          not assigned a weight will receive no traffic.
+                        type: object
+                    type: object
+                  type: array
+                enabled:
+                  description: If set to true, locality based load balancing will
+                    be enabled
+                  type: boolean
+                failover:
+                  description: 'Optional: only failover or distribute can be set.
+                    Explicitly specify the region traffic will land on when endpoints
+                    in local region becomes unhealthy. Should be used together with
+                    OutlierDetection to detect unhealthy endpoints. Note: if no OutlierDetection
+                    specified, this will not take effect.'
+                  items:
+                    properties:
+                      from:
+                        description: Originating region.
+                        type: string
+                      to:
+                        description: Destination region the traffic will fail over
+                          to when endpoints in the 'from' region becomes unhealthy.
+                        type: string
+                    type: object
+                  type: array
+              type: object
             meshExpansion:
               description: If set to true, the pilot and citadel mtls will be exposed
                 on the ingress gateway also the remote istios will be connected through
@@ -246,6 +351,10 @@ spec:
                 minReplicas:
                   format: int32
                   type: integer
+                multiClusterSupport:
+                  description: Turn it on if you use mixer that supports multi cluster
+                    telemetry
+                  type: boolean
                 nodeSelector:
                   type: object
                 replicaCount:
@@ -260,6 +369,12 @@ spec:
               type: object
             mtls:
               description: MTLS enables or disables global mTLS
+              type: boolean
+            multiMesh:
+              description: Set to true to connect two or more meshes via their respective
+                ingressgateway services when workloads in each cluster cannot directly
+                talk to one another. All meshes should be using Istio mTLS and must
+                have a shared root CA for this model to work.
               type: boolean
             nodeAgent:
               description: NodeAgent configuration options
@@ -311,6 +426,8 @@ spec:
                   type: integer
                 resources:
                   type: object
+                sidecar:
+                  type: boolean
                 tolerations:
                   items:
                     type: object
@@ -322,16 +439,41 @@ spec:
             proxy:
               description: Proxy configuration options
               properties:
+                componentLogLevel:
+                  description: Per Component log level for proxy, applies to gateways
+                    and sidecars. If a component level is not set, then the "LogLevel"
+                    will be used. If left empty, "misc:error" is used.
+                  type: string
+                dnsRefreshRate:
+                  description: Configure the DNS refresh rate for Envoy cluster of
+                    type STRICT_DNS This must be given it terms of seconds. For example,
+                    300s is valid but 5m is invalid.
+                  pattern: ^[0-9]{1,5}s$
+                  type: string
                 enableCoreDump:
                   description: If set, newly injected sidecars will have core dumps
                     enabled.
                   type: boolean
                 image:
                   type: string
+                logLevel:
+                  description: 'Log level for proxy, applies to gateways and sidecars.
+                    If left empty, "warning" is used. Expected values are: trace|debug|info|warning|error|critical|off'
+                  enum:
+                    - trace
+                    - debug
+                    - info
+                    - warning
+                    - error
+                    - critical
+                    - "off"
+                  type: string
                 privileged:
                   description: If set to true, istio-proxy container will have privileged
                     securityContext
                   type: boolean
+                resources:
+                  type: object
               type: object
             proxyInit:
               description: Proxy Init configuration options
@@ -344,6 +486,8 @@ spec:
                 will be distributed through the SecretDiscoveryService instead of
                 using K8S secrets to mount the certificates
               properties:
+                customTokenDirectory:
+                  type: string
                 enabled:
                   description: If set to true, mTLS certificates for the sidecars
                     will be distributed through the SecretDiscoveryService instead
@@ -373,13 +517,30 @@ spec:
               properties:
                 affinity:
                   type: object
+                alwaysInjectSelector:
+                  description: 'AlwaysInjectSelector: Forces the injection on pods
+                    whose labels match this selector. It''s an array of label selectors,
+                    that will be OR''ed, meaning we will iterate over it and stop
+                    at the first match'
+                  items:
+                    type: object
+                  type: array
                 autoInjectionPolicyEnabled:
                   description: This controls the 'policy' in the sidecar injector
+                  type: boolean
+                enableNamespacesByDefault:
+                  description: This controls whether the webhook looks for namespaces
+                    for injection enabled or disabled
                   type: boolean
                 enabled:
                   type: boolean
                 image:
                   type: string
+                init:
+                  properties:
+                    resources:
+                      type: object
+                  type: object
                 initCNIConfiguration:
                   properties:
                     affinity:
@@ -408,6 +569,14 @@ spec:
                       description: Logging level for CNI binary
                       type: string
                   type: object
+                neverInjectSelector:
+                  description: 'NeverInjectSelector: Refuses the injection on pods
+                    whose labels match this selector. It''s an array of label selectors,
+                    that will be OR''ed, meaning we will iterate over it and stop
+                    at the first match Takes precedence over AlwaysInjectSelector.'
+                  items:
+                    type: object
+                  type: array
                 nodeSelector:
                   type: object
                 replicaCount:
@@ -481,7 +650,7 @@ spec:
               type: boolean
             version:
               description: Contains the intended Istio version
-              pattern: ^1.1
+              pattern: ^1.2
               type: string
             watchAdapterCRDs:
               description: Whether or not to establish watches for adapter-specific
@@ -504,3 +673,4 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
+{{- end }}
