--- a/deploy/charts/istio-operator/templates/operator-remoteistio-1.2-crd.yaml
+++ b/deploy/charts/istio-operator/templates/operator-remoteistio-1.2-crd.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.istioVersion 1.2 }}
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
@@ -62,9 +63,22 @@ spec:
               properties:
                 affinity:
                   type: object
+                caSecretName:
+                  type: string
                 enabled:
                   type: boolean
+                healthCheck:
+                  description: Enable health checking on the Citadel CSR signing API.
+                    https://istio.io/docs/tasks/security/health-check/
+                  type: boolean
                 image:
+                  type: string
+                maxWorkloadCertTTL:
+                  description: Citadel uses a flag max-workload-cert-ttl to control
+                    the maximum lifetime for Istio certificates issued to workloads.
+                    The default value is 90 days. If workload-cert-ttl on Citadel
+                    or node agent is greater than max-workload-cert-ttl, Citadel will
+                    fail issuing the certificate.
                   type: string
                 nodeSelector:
                   type: object
@@ -74,6 +88,16 @@ spec:
                   items:
                     type: object
                   type: array
+                workloadCertTTL:
+                  description: For the workloads running in Kubernetes, the lifetime
+                    of their Istio certificates is controlled by the workload-cert-ttl
+                    flag on Citadel. The default value is 90 days. This value should
+                    be no greater than max-workload-cert-ttl of Citadel.
+                  type: string
+              type: object
+            defaultResources:
+              description: DefaultResources are applied for all Istio components by
+                default, can be overridden for each component
               type: object
             enabledServices:
               description: EnabledServices the Istio component services replicated
@@ -105,16 +129,41 @@ spec:
             proxy:
               description: Proxy configuration options
               properties:
+                componentLogLevel:
+                  description: Per Component log level for proxy, applies to gateways
+                    and sidecars. If a component level is not set, then the "LogLevel"
+                    will be used. If left empty, "misc:error" is used.
+                  type: string
+                dnsRefreshRate:
+                  description: Configure the DNS refresh rate for Envoy cluster of
+                    type STRICT_DNS This must be given it terms of seconds. For example,
+                    300s is valid but 5m is invalid.
+                  pattern: ^[0-9]{1,5}s$
+                  type: string
                 enableCoreDump:
                   description: If set, newly injected sidecars will have core dumps
                     enabled.
                   type: boolean
                 image:
                   type: string
+                logLevel:
+                  description: 'Log level for proxy, applies to gateways and sidecars.
+                           If left empty, "warning" is used. Expected values are: trace|debug|info|warning|error|critical|off'
+                  enum:
+                    - trace
+                    - debug
+                    - info
+                    - warning
+                    - error
+                    - critical
+                    - "off"
+                  type: string
                 privileged:
                   description: If set to true, istio-proxy container will have privileged
                     securityContext
                   type: boolean
+                resources:
+                  type: object
               type: object
             proxyInit:
               description: Proxy Init configuration options
@@ -127,13 +176,30 @@ spec:
               properties:
                 affinity:
                   type: object
+                alwaysInjectSelector:
+                  description: 'AlwaysInjectSelector: Forces the injection on pods
+                           whose labels match this selector. It''s an array of label selectors,
+                           that will be OR''ed, meaning we will iterate over it and stop
+                           at the first match'
+                  items:
+                    type: object
+                  type: array
                 autoInjectionPolicyEnabled:
                   description: This controls the 'policy' in the sidecar injector
+                  type: boolean
+                enableNamespacesByDefault:
+                  description: This controls whether the webhook looks for namespaces
+                    for injection enabled or disabled
                   type: boolean
                 enabled:
                   type: boolean
                 image:
                   type: string
+                init:
+                  properties:
+                    resources:
+                      type: object
+                  type: object
                 initCNIConfiguration:
                   properties:
                     affinity:
@@ -162,6 +228,14 @@ spec:
                       description: Logging level for CNI binary
                       type: string
                   type: object
+                neverInjectSelector:
+                  description: 'NeverInjectSelector: Refuses the injection on pods
+                           whose labels match this selector. It''s an array of label selectors,
+                           that will be OR''ed, meaning we will iterate over it and stop
+                           at the first match Takes precedence over AlwaysInjectSelector.'
+                  items:
+                    type: object
+                  type: array
                 nodeSelector:
                   type: object
                 replicaCount:
@@ -191,3 +265,4 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
+{{- end }}
