--- a/deploy/charts/istio-operator/templates/authproxy-service.yaml
+++ b/deploy/charts/istio-operator/templates/authproxy-service.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "istio-operator.fullname" . }}-authproxy
+  namespace: {{ .Release.Namespace }}
   annotations:
     prometheus.io/port: "8443"
     prometheus.io/scheme: https
@@ -20,6 +21,7 @@ spec:
   ports:
   - name: https
     port: 8443
+    protocol: TCP
     targetPort: https
   selector:
     control-plane: controller-manager
