--- a/deploy/charts/istio-operator/templates/operator-remoteistio-1.1-crd.yaml
+++ b/deploy/charts/istio-operator/templates/operator-remoteistio-1.1-crd.yaml
@@ -1,4 +1,4 @@
-{{ if eq .Values.istioVersion 1.1 }}
+{{ if eq .Values.istioVersion "1.1" }}
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
