--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -59,6 +59,18 @@ spec:
                   type: object
                 caSecretName:
                   type: string
+                enableNamespacesByDefault:
+                  description: 'Determines Citadel default behavior if the ca.istio.io/env
+                    or ca.istio.io/override labels are not found on a given namespace.  For
+                    example: consider a namespace called "target", which has neither
+                    the "ca.istio.io/env" nor the "ca.istio.io/override" namespace
+                    labels. To decide whether or not to generate secrets for service
+                    accounts created in this "target" namespace, Citadel will defer
+                    to this option. If the value of this option is "true" in this
+                    case, secrets will be generated for the "target" namespace. If
+                    the value of this option is "false" Citadel will not generate
+                    secrets upon service account creation.'
+                  type: boolean
                 enabled:
                   type: boolean
                 healthCheck:
@@ -89,6 +101,11 @@ spec:
                     be no greater than max-workload-cert-ttl of Citadel.
                   type: string
               type: object
+            clusterName:
+              description: Should be set to the name of the cluster this installation
+                will run in. This is required for sidecar injection to properly label
+                proxies
+              type: string
             controlPlaneSecurityEnabled:
               description: ControlPlaneSecurityEnabled control plane services are
                 communicating through mTLS
@@ -117,6 +134,8 @@ spec:
               properties:
                 affinity:
                   type: object
+                configValidation:
+                  type: boolean
                 enabled:
                   type: boolean
                 image:
@@ -330,6 +349,11 @@ spec:
                 on the ingress gateway also the remote istios will be connected through
                 gateways
               type: boolean
+            meshID:
+              description: Mesh ID means Mesh Identifier. It should be unique within
+                the scope where meshes will interact with each other, but it is not
+                required to be globally/universally unique.
+              type: string
             mixer:
               description: Mixer configuration options
               properties:
@@ -354,8 +378,25 @@ spec:
                 replicaCount:
                   format: int32
                   type: integer
+                reportBatchMaxEntries:
+                  description: Set reportBatchMaxEntries to 0 to use the default batching
+                    behavior (i.e., every 100 requests). A positive value indicates
+                    the number of requests that are batched before telemetry data
+                    is sent to the mixer server
+                  format: int32
+                  type: integer
+                reportBatchMaxTime:
+                  description: Set reportBatchMaxTime to 0 to use the default batching
+                    behavior (i.e., every 1 second). A positive time value indicates
+                    the maximum wait time since the last request will telemetry data
+                    be batched before being sent to the mixer server
+                  type: string
                 resources:
                   type: object
+                sessionAffinityEnabled:
+                  description: Set whether to create a STRICT_DNS type cluster for
+                    istio-telemetry.
+                  type: boolean
                 tolerations:
                   items:
                     type: object
@@ -403,6 +444,8 @@ spec:
               properties:
                 affinity:
                   type: object
+                enableProtocolSniffing:
+                  type: boolean
                 enabled:
                   type: boolean
                 image:
@@ -430,6 +473,12 @@ spec:
                   format: float
                   type: number
               type: object
+            policy:
+              description: Policy configuration options
+              properties:
+                checksEnabled:
+                  type: boolean
+              type: object
             proxy:
               description: Proxy configuration options
               properties:
@@ -437,6 +486,10 @@ spec:
                   description: Per Component log level for proxy, applies to gateways
                     and sidecars. If a component level is not set, then the "LogLevel"
                     will be used. If left empty, "misc:error" is used.
+                  type: string
+                coreDumpImage:
+                  description: Image used to enable core dumps. This is only used,
+                    when "EnableCoreDump" is set to true.
                   type: string
                 dnsRefreshRate:
                   description: Configure the DNS refresh rate for Envoy cluster of
@@ -448,6 +501,63 @@ spec:
                   description: If set, newly injected sidecars will have core dumps
                     enabled.
                   type: boolean
+                envoyAccessLogService:
+                  properties:
+                    enabled:
+                      type: boolean
+                    host:
+                      type: string
+                    port:
+                      format: int32
+                      type: integer
+                    tcpKeepalive:
+                      properties:
+                        interval:
+                          type: string
+                        probes:
+                          format: int32
+                          type: integer
+                        time:
+                          type: string
+                      type: object
+                    tlsSettings:
+                      properties:
+                        caCertificates:
+                          type: string
+                        clientCertificate:
+                          type: string
+                        mode:
+                          type: string
+                        privateKey:
+                          type: string
+                        sni:
+                          type: string
+                        subjectAltNames:
+                          items:
+                            type: string
+                          type: array
+                      type: object
+                  type: object
+                envoyMetricsService:
+                  properties:
+                    enabled:
+                      type: boolean
+                    host:
+                      type: string
+                    port:
+                      format: int32
+                      type: integer
+                  type: object
+                envoyStatsD:
+                  properties:
+                    enabled:
+                      type: boolean
+                    host:
+                      type: string
+                    port:
+                      format: int32
+                      type: integer
+                  type: object
                 image:
                   type: string
                 logLevel:
@@ -466,6 +576,8 @@ spec:
                   description: If set to true, istio-proxy container will have privileged
                     securityContext
                   type: boolean
+                protocolDetectionTimeout:
+                  type: string
                 resources:
                   type: object
               type: object
@@ -487,24 +599,17 @@ spec:
                     will be distributed through the SecretDiscoveryService instead
                     of using K8S secrets to mount the certificates.
                   type: boolean
+                tokenAudience:
+                  description: "The JWT token for SDS and the aud field of such JWT.
+                    See RFC 7519, section 4.1.3. When a CSR is sent from Citadel Agent
+                    to the CA (e.g. Citadel), this aud is to make sure the \tJWT is
+                    intended for the CA."
+                  type: string
                 udsPath:
                   description: Unix Domain Socket through which envoy communicates
                     with NodeAgent SDS to get key/cert for mTLS. Use secret-mount
                     files instead of SDS if set to empty.
                   type: string
-                useNormalJwt:
-                  description: If set to true, envoy will fetch normal k8s service
-                    account JWT from '/var/run/secrets/kubernetes.io/serviceaccount/token'
-                    (https://kubernetes.io/docs/tasks/access-application-cluster/access-cluster/#accessing-the-api-from-a-pod)
-                    and pass to sds server, which will be used to request key/cert
-                    eventually this flag is ignored if UseTrustworthyJwt is set
-                  type: boolean
-                useTrustworthyJwt:
-                  description: 'If set to true, Istio will inject volumes mount for
-                    k8s service account JWT, so that K8s API server mounts k8s service
-                    account JWT to envoy container, which will be used to generate
-                    key/cert eventually. (prerequisite: https://kubernetes.io/docs/concepts/storage/volumes/#projected)'
-                  type: boolean
               type: object
             sidecarInjector:
               description: SidecarInjector configuration options
@@ -622,6 +727,8 @@ spec:
                       description: specifies whether data should be sent with TLS
                       type: boolean
                   type: object
+                stackdriver:
+                  type: object
                 tracer:
                   enum:
                   - zipkin
@@ -644,7 +751,7 @@ spec:
               type: boolean
             version:
               description: Contains the intended Istio version
-              pattern: ^1.2
+              pattern: ^1.3
               type: string
             watchAdapterCRDs:
               description: Whether or not to establish watches for adapter-specific
