add ClusterName to RemoteIstio

--- a/config/base/crds/istio_v1beta1_remoteistio.yaml
+++ b/config/base/crds/istio_v1beta1_remoteistio.yaml
@@ -101,6 +101,10 @@ spec:
                     be no greater than max-workload-cert-ttl of Citadel.
                   type: string
               type: object
+            clusterName:
+              description: Should be set to the name of the cluster, this is required
+                for sidecar injection to properly label proxies
+              type: string
             defaultResources:
               description: DefaultResources are applied for all Istio components by
                 default, can be overridden for each component
