Configure Envoy access logs

--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -523,6 +523,28 @@ spec:
             proxy:
               description: Proxy configuration options
               properties:
+                accessLogEncoding:
+                  description: Configure the access log for sidecar to JSON or TEXT.
+                  enum:
+                  - JSON
+                  - TEXT
+                  type: string
+                accessLogFile:
+                  description: 'Configures the access log for each sidecar. Options:   ""
+                    - disables access log   "/dev/stdout" - enables access log'
+                  enum:
+                  - ""
+                  - /dev/stdout
+                  type: string
+                accessLogFormat:
+                  description: 'Configure how and what fields are displayed in sidecar
+                    access log. Setting to empty string will result in default log
+                    format. If accessLogEncoding is TEXT, value will be used directly
+                    as the log format example: "[%START_TIME%] %REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%
+                    %PROTOCOL%\n" If AccessLogEncoding is JSON, value will be parsed
+                    as map[string]string example: ''{"start_time": "%START_TIME%",
+                    "req_method": "%REQ(:METHOD)%"}'''
+                  type: string
                 componentLogLevel:
                   description: Per Component log level for proxy, applies to gateways
                     and sidecars. If a component level is not set, then the "LogLevel"
