Added support for setting trust domain (global.trustDomain equivalent)

--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -848,6 +848,10 @@ spec:
                       type: string
                   type: object
               type: object
+            trustDomain:
+              description: The domain serves to identify the system with SPIFFE. (default
+                "cluster.local")
+              type: string
             useMCP:
               description: Use the Mesh Control Protocol (MCP) for configuring Mixer
                 and Pilot. Requires galley.
